# datastar-haskell

./: .gitignore  CHANGELOG.md  HACKAGE.md  README.md  cabal.project  datastar-hs.cabal  fourmolu.yaml  hie.yaml
.github/workflows/: test.yml
e2e/: package-lock.json  package.json  playwright.config.ts
e2e-server/: Main.hs
e2e/tests/: datastar.spec.ts
examples/: activity-feed.hs  activity-feed.html  heap-view.hs  heap-view.html  hello-world-channel.hs  hello-world-channel.html  hello-world-servant.hs  hello-world-warp.hs  hello-world.html
src/Hypermedia/: Datastar.hs
src/Hypermedia/Datastar/: ExecuteScript.hs  Logger.hs  PatchElements.hs  PatchSignals.hs  Types.hs  WAI.hs
test/: Main.hs
test/Hypermedia/Datastar/: ExecuteScriptSpec.hs  PatchElementsSpec.hs  PatchSignalsSpec.hs  SSESpec.hs
