cabal-version:   3.0
name:            datastar-hs
version:         0.1.0.0
synopsis:        Haskell bindings for Datastar
description:
  Server-side SDK for building real-time hypermedia applications with
  <https://data-star.dev/ Datastar>. Stream HTML fragments, reactive
  signal updates, and scripts to the browser over server-sent events
  (SSE). Built on WAI so it works with Warp, Scotty, Servant, Yesod,
  and any other WAI-compatible framework.
homepage:        https://github.com/carlohamalainen/datastar-hs
bug-reports:     https://github.com/carlohamalainen/datastar-hs/issues
license:         MIT
license-file:    LICENSE
author:          Carlo Hamalainen
maintainer:      carlo@carlo-hamalainen.net
category:        Web, Hypermedia
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
  exposed-modules:
    Hypermedia.Datastar
    Hypermedia.Datastar.ExecuteScript
    Hypermedia.Datastar.Logger
    Hypermedia.Datastar.PatchElements
    Hypermedia.Datastar.PatchSignals
    Hypermedia.Datastar.Types
    Hypermedia.Datastar.WAI
  hs-source-dirs:  src
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
  build-depends:
    , base       >= 4.14  && < 5
    , aeson      >= 2.0   && < 3
    , bytestring >= 0.10  && < 1
    , http-types >= 0.12  && < 1
    , text       >= 1.2   && < 3
    , wai        >= 3.2   && < 4

test-suite datastar-hs-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    Hypermedia.Datastar.PatchElementsSpec
    Hypermedia.Datastar.SSESpec
  build-depends:
    , base
    , bytestring
    , datastar-hs
    , hspec
    , text
    , wai
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
