cabal-version:   3.0
name:            datastar-hs
version:         0.1.0.1
synopsis:        Haskell bindings for Datastar
description:
  Server-side SDK for building real-time hypermedia applications with
  <https://data-star.dev/ Datastar>. Stream HTML fragments, reactive
  signal updates, and scripts to the browser over server-sent events
  (SSE). Built on WAI so it works with Warp, Scotty, Servant, Yesod,
  and any other WAI-compatible framework.
homepage:        https://github.com/starfederation/datastar-haskell
bug-reports:     https://github.com/starfederation/datastar-haskell/issues
license:         MIT
license-file:    LICENSE
author:          Carlo Hamalainen
maintainer:      carlo@carlo-hamalainen.net
category:        Web, Hypermedia
build-type:      Simple
extra-doc-files: CHANGELOG.md README.md

source-repository head
  type:     git
  location: https://github.com/starfederation/datastar-haskell.git

library
  exposed-modules:
    Hypermedia.Datastar
    Hypermedia.Datastar.ExecuteScript
    Hypermedia.Datastar.Logger
    Hypermedia.Datastar.PatchElements
    Hypermedia.Datastar.PatchSignals
    Hypermedia.Datastar.Types
    Hypermedia.Datastar.WAI
  hs-source-dirs:  src
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
  build-depends:
    , base       >= 4.14  && < 5
    , aeson      >= 2.0   && < 3
    , bytestring >= 0.10  && < 1
    , http-types >= 0.12  && < 1
    , text       >= 1.2   && < 3
    , wai        >= 3.2   && < 4

test-suite datastar-hs-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    Hypermedia.Datastar.ExecuteScriptSpec
    Hypermedia.Datastar.PatchElementsSpec
    Hypermedia.Datastar.PatchSignalsSpec
    Hypermedia.Datastar.SSESpec
  build-depends:
    , base
    , bytestring
    , datastar-hs
    , hspec
    , text
    , wai
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings

executable hello-world-warp
  main-is:          hello-world-warp.hs
  hs-source-dirs:   examples
  default-language:  Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
  build-depends:
    , base >= 4.7
    , aeson
    , bytestring
    , http-types
    , text
    , wai
    , warp              >= 3.2   && < 4
    , datastar-hs
  ghc-options: -threaded

executable hello-world-servant
  main-is:          hello-world-servant.hs
  hs-source-dirs:   examples
  default-language:  Haskell2010
  default-extensions:
    DataKinds
    ImportQualifiedPost
    MultiParamTypeClasses
    OverloadedStrings
    TypeOperators
  build-depends:
    , base >= 4.7
    , aeson
    , bytestring
    , http-media        >= 0.8   && < 1
    , http-types
    , servant-server    >= 0.19  && < 1
    , tagged            >= 0.8   && < 1
    , text
    , wai
    , warp              >= 3.2   && < 4
    , datastar-hs
  ghc-options: -threaded

executable hello-world-channel
  main-is:          hello-world-channel.hs
  hs-source-dirs:   examples
  default-language:  Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
  build-depends:
    , base >= 4.7
    , aeson
    , bytestring
    , http-types
    , stm               >= 2.4   && < 3
    , text
    , wai
    , warp              >= 3.2   && < 4
    , datastar-hs
  ghc-options: -threaded

executable activity-feed
  main-is:          activity-feed.hs
  hs-source-dirs:   examples
  default-language:  Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
  build-depends:
    , base >= 4.7
    , aeson
    , bytestring
    , text
    , time              >= 1.9   && < 2
    , http-types
    , wai
    , warp              >= 3.2   && < 4
    , datastar-hs
  ghc-options: -threaded

executable heap-view
  main-is:          heap-view.hs
  hs-source-dirs:   examples
  default-language:  Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
    ScopedTypeVariables
  build-depends:
    , base >= 4.7
    , bytestring
    , containers        >= 0.6   && < 1
    , ghc-heap          >= 9.0   && < 10
    , http-types
    , stm               >= 2.4   && < 3
    , text
    , uuid              >= 1.3   && < 2
    , wai
    , warp              >= 3.2   && < 4
    , datastar-hs
  ghc-options: -threaded -O0